--- a/first-spark-practice/pom.xml
+++ b/first-spark-practice/pom.xml
@@ -6,6 +6,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - first-spark-practice</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
   <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
