--- a/first-spark-practice/pom.xml
+++ b/first-spark-practice/pom.xml
@@ -25,5 +25,11 @@
     <artifactId>aws-java-sdk-s3</artifactId>
     <version>1.12.462</version>
   </dependency>
+
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.5.2</version>
+    </dependency>
   </dependencies>
 </project>
